# dorado-docs

./: .gitignore  .gitlab-ci.yml  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  DEV.md  README.md  main.py  mkdocs.yml  pyproject.toml
docs/: index.md
docs/assembly/: correct.md  polish.md  variant.md
docs/barcoding/: barcoding.md  custom_barcodes.md  custom_primers.md  sample_sheet.md
docs/basecaller/: alignment.md  basecall_overview.md  duplex.md  mods.md  move_table.md  polya_estimation.md  qscore.md  read_splitting.md  read_trimming.md  sam_spec.md  simplex.md
docs/correct/: correct.md
docs/extra/javascript/: readthedocs.js
docs/extra/stylesheets/: extra.css
docs/models/: complex.md  downloader.md  list.md  models.md
docs/troubleshooting/: faq.md  troubleshooting.md
src/dorado_docs/: __init__.py  dorado_bash_lexer.py
